fixed overflow on home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 .showcase {
     background: #F3F5F9;
     padding-top: 14rem;
